side bar fixed, not responsive. next step home page alignment

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -1,23 +1,30 @@
+.App {
+  display: flex;
+  justify-content: space-around;
+}
+
 .page {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  // display: flex;
+  // flex-direction: row;
+  // align-items: center;
+
 }
 
 .container {
+  // display: flex;
   width: 100%;
   will-change: contents;
   opacity: 0;
-  margin: 0 auto;
+  margin: 1vh 1vh;
   z-index: 1;
   transform-style: preserve-3d;
   animation: fadeIn 1s forwards;
   animation-duration: 1s;
-  flex-direction: row;
-  justify-content: center;
-  align-content: center;
+  // flex-direction: row;
+  justify-content: space-evenly;
+  // align-content: center;
 }
 
 .container.home-page,
@@ -82,7 +89,7 @@
       transform: translateY(-50%);
       // width: 45%;
       // max-height: 50%;
-      margin: 5vh 5vh;
+      margin: 5px auto;
       animation: fadeIn 1s 1.7s backwards;
       // to avoid text being in a vertical form
       // white-space: nowrap;
