--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -1,8 +1,11 @@
 .nav-bar {
+  display: flex;
   background: #000000;
-  width: 15vh;
-  height: auto;
+  width: 8%;
+  // height: auto;
   z-index: 3;
+  flex-direction: column;
+  // justify-content: space-between;
 
   .logo {
     // display: block;
@@ -10,20 +13,20 @@
 
     img {
       // display: block;
-      margin: 15px 10px;
-      width: 77%;
+      margin: 15px 20px;
+      width: 70%;
       // height: auto;
     }
   }
 
   nav {
-    display: flex;
+    // display: flex;
     flex-direction: column;
     text-align: center;
     // position: absolute;
     // height: 210px;
     // top: 23%;
-    margin-top: 30px;
+    margin: 15px 15px;
     width: 100%;
 
     a {
@@ -31,11 +34,11 @@
       color: #4d4d4e;
       display: flex;
       line-height: 47px;
-      margin: 6px 25px;
+      margin: 10px 25px;
       height: 45px;
-      // position: relative;
+      justify-items: center;
       text-decoration: none;
-      text-align: center;
+      // text-align: center;
 
       i {
         transition: all 0.3s ease-out;
@@ -58,9 +61,8 @@
         content: '';
         font-size: 9px;
         letter-spacing: 2px;
-        // position: absolute;
         bottom: 0;
-        // display: block;
+        // display: flex;
         width: 100%;
         text-align: center;
         opacity: 0;
@@ -117,7 +119,7 @@
     padding: 0;
     list-style: none;
     text-align: center;
-    margin: 15px 10px;
+    margin: 70px 10px;
 
     li {
       a.Link {
