--- a/src/views/Home/index.scss
+++ b/src/views/Home/index.scss
@@ -6,7 +6,7 @@
     opacity: 1;
     border-radius: 50%;
     animation: fadeIn 1s 1s backwards;
-    margin: 350px 620px;
+    // float: left;
     flex-direction: row;
 
     &::before {
